dsme (0.61.56) unstable; urgency=low

  [Antti Virtanen]
  * Increased CHARGER_DISCONNECT_TIMEOUT to 15 sec.

  [Matias Muhonen]
  * Fix a race between waitfordsme and dsmesock/accept_client (Fixes: NB#259843)

 -- Matias Muhonen <ext-matias.muhonen@nokia.com>  Thu, 26 May 2011 09:24:50 +0000

dsme (0.61.55) unstable; urgency=low

  [Antti Virtanen]
  * Fixed memory leaks from validator netlink message handling.
  * Added dependency to upstart and requesting dsme::DeviceStateControl for /sbin/init.

  [Matias Muhonen]
  * Allow dsmesock usage only with the dsme::DeviceStateControl credential (Fixes: NB#255241)

  [Jyrki Hämäläinen]
  * Cleanup WD kicking in the state module
  * Fix the testdriver

 -- Antti Virtanen <antti.i.virtanen@nokia.com>  Wed, 11 May 2011 14:37:27 +0300

dsme (0.61.54) unstable; urgency=low

  * Don't malf on no reference hash (Fixes: NB#253870)

 -- Matias Muhonen <ext-matias.muhonen@nokia.com>  Wed, 11 May 2011 07:03:42 +0000

dsme (0.61.53) unstable; urgency=low

  *  Fixes: NB#249323 - Need to add feature to system heartbeat to synchronize multiple clients in fixed time 

 -- Raimo Vuonnala <raimo.vuonnala@nokia.com>  Thu, 21 Apr 2011 11:02:27 +0300

dsme (0.61.52) unstable; urgency=low

  * Use new thermal limits for device surface (Fixes: NB#231167)

 -- Semi Malinen <semi.malinen@nokia.com>  Tue, 19 Apr 2011 07:54:09 +0000

dsme (0.61.51) unstable; urgency=low

  * Don't crash if D-Bus disappears during startup (Fixes: NB#246582)

 -- Semi Malinen <semi.malinen@nokia.com>  Thu, 14 Apr 2011 06:02:08 +0000

dsme (0.61.50) unstable; urgency=low

  [ Matias Muhonen ]
  * Storage space monitor (Fixes: NB#241806)

 -- Matias Muhonen <ext-matias.muhonen@nokia.com>  Thu, 07 Apr 2011 09:27:23 +0000

dsme (0.61.49) unstable; urgency=low

  [ Matias Muhonen ]
  * Use ftw64() instead of ftw() in rpdir (Fixes: NB#241279)

 -- Matias Muhonen <ext-matias.muhonen@nokia.com>  Tue, 29 Mar 2011 13:33:38 +0000

dsme (0.61.48) unstable; urgency=low
